--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.SecondActivity" />
+
+        <!--=================================================================第三方配置==================================================================-->
         <!-- 友盟统计配置 -->
         <meta-data
             android:name="UMENG_APPKEY"
@@ -31,7 +34,7 @@
             android:name="UMENG_CHANNEL"
             android:value="@string/xwjr" />
 
-        <activity android:name=".activity.SecondActivity"></activity>
+
     </application>
 
 </manifest>
